meta data for twitter and facebook

--- a/index.html
+++ b/index.html
@@ -1,12 +1,42 @@
 <!DOCTYPE html>
 <html lang="en">
-
 <head>
+
+	<!-- Standard stuff -->
 	<meta charset="utf-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1">
-    <link href="css/bootstrap.css" rel="stylesheet">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0, user-scalable=no">
+    <meta name="description" content="Jordan Banafsheha's personal website and projects">
+    <meta name="author" content="Jordan Banafsheha">
+
+    <!-- Bootstrap CSS -->
+	<link href="css/bootstrap.css" rel="stylesheet">
+
+	 <!-- Twitter Card data -->
+    <meta name="twitter:card" content="summary_large_image">
+    <meta name="twitter:site" content="@jordanbanaf">
+    <meta name="twitter:title" content="Jordan Banafsheha">
+    <meta name="twitter:description" content="Jordan Banafsheha's personal website and projects">
+    <meta name="twitter:creator" content="@jordanbanaf">
+    <!-- Twitter summary card with large image must be at least 280x150px -->
+    <meta name="twitter:image:src" content="http://jordanbana.com/img/jordan_banafsheha_profile_pic.png">
+
+     <!-- Open Graph data -->
+    <meta property="og:title" content="Jordan Banafsheha" />
+    <meta property="og:type" content="article" />
+    <meta property="og:url" content="http://www.jordanbana.com" />
+    <meta property="og:image" content="http:://jordanbana.com/img/jordan_banafsheha_profile_pic.png" />
+    <meta property="og:description" content="Jordan Banafsheha's personal website and projects" />
+    <meta property="og:site_name" content="Jordan Banafsheha" />
+    <meta property="article:published_time" content="" />
+    <meta property="article:modified_time" content="" />
+    <meta property="article:section" content="Blog" />
+    <meta property="article:tag" content="" />
+    <meta property="article:author" content="https://www.facebook.com/jordan.banafsheha" />
 
 	<title>Jordan Banafsheha</title>
+
 </head>
 
 </html>
+
+
