font awesome include

--- a/index.html
+++ b/index.html
@@ -11,6 +11,9 @@
     <!-- Bootstrap CSS -->
 	<link href="css/bootstrap.css" rel="stylesheet">
 
+	<!-- Font awesome include -->
+    <link href="font-awesome/css/font-awesome.min.css" rel="stylesheet" type="text/css">
+
 	 <!-- Twitter Card data -->
     <meta name="twitter:card" content="summary_large_image">
     <meta name="twitter:site" content="@jordanbanaf">
