--- a/index.html
+++ b/index.html
@@ -40,6 +40,61 @@
 
 </head>
 
+
+<body>
+	<!--background color-->
+	<body style="background-color:#4a79bf;">
+
+
+	 <!-- NAV BAR -->
+    <nav class="navbar navbar-default navbar-fixed-top">
+        <div class="container">
+
+            <!-- Brand and toggle get grouped for better mobile display -->
+            <div class="navbar-header page-scroll">
+                <button type="button" class="navbar-toggle" data-toggle="collapse" data-target="#bs-example-navbar-collapse-1">
+                    <span class="sr-only">Toggle navigation</span>
+                    <span class="icon-bar"></span>
+                    <span class="icon-bar"></span>
+                    <span class="icon-bar"></span>
+                </button>
+                <a class="navbar-brand" href="#page-top">Jordan Banafsheha</a>
+            </div>
+
+            <!-- Collect the nav links, forms, and other content for toggling -->
+            <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
+                <ul class="nav navbar-nav navbar-right">
+                    <li class="hidden">
+                        <a href="#page-top"></a>
+                    </li>
+                    <li class="page-scroll">
+                        <a href="#projects">Projects</a>
+                    </li>
+                </ul>
+            </div><!-- /.navbar-collapse -->
+        </div><!-- /.container-fluid -->
+    </nav>
+
+
+<!--Header section-->
+     <header>
+        <div class="container" id="header">
+        	<div class="row">
+        		<div class="col-lg-12 text-center">
+        			<center>
+        				<img class="img-responsive" src="img/jordan_banafsheha_profile_pic.png" alt="Jordan Banafsheha" class="img-circle" style="padding-top:100px">
+        			</center>
+        				<h1>hi</h1>
+        		</div>
+        	</div>
+        </div>
+    </header>
+
+
+</body>
+
+
+
 </html>
 
 
