--- a/index.html
+++ b/index.html
@@ -11,6 +11,9 @@
     <!-- Bootstrap CSS -->
 	<link href="css/bootstrap.css" rel="stylesheet">
 
+	<!-- personal style sheet -->
+	<link href="css/personal_site.css" rel="stylesheet">
+
 	<!-- Font awesome include -->
     <link href="font-awesome/css/font-awesome.min.css" rel="stylesheet" type="text/css">
 
@@ -42,8 +45,6 @@
 
 
 <body>
-	<!--background color-->
-	<body style="background-color:#4a79bf;">
 
 
 	 <!-- NAV BAR -->
@@ -78,13 +79,14 @@
 
 <!--Header section-->
      <header>
-        <div class="container" id="header">
+        <div class="container">
         	<div class="row">
         		<div class="col-lg-12 text-center">
         			<center>
         				<img class="img-responsive" src="img/jordan_banafsheha_profile_pic.png" alt="Jordan Banafsheha" class="img-circle" style="padding-top:100px">
         			</center>
         				<h1>hi</h1>
+
         		</div>
         	</div>
         </div>
