--- a/index.html
+++ b/index.html
@@ -83,7 +83,9 @@
         	<div class="row">
         		<div class="col-lg-12 text-center">
         			<center>
+        				<!--
         				<img class="img-responsive" src="img/jordan_banafsheha_profile_pic.png" alt="Jordan Banafsheha" class="img-circle" style="padding-top:100px">
+        				-->
         			</center>
         				<h1>hi</h1>
 
@@ -91,6 +93,40 @@
         	</div>
         </div>
     </header>
+
+
+
+    <section class="hackathon" id="hackathon_section">
+    	<div class="container">
+    		<div class="row-fluid">
+
+    			<!--HACK TECH-->
+
+	    		<center>
+	    		<br>	
+	    		<h1> Hackathon: <i>|ˈhakəˌTHän |</i> "Hack" + "Marathon" </h2>
+	    		<h3> <i><b>Synonyms</b></i>: fun, challenging, crazy, sleep-deprivation, madness, APIs, food</h3>
+	    		<br>
+	    		<br>	
+	    		<div class="col-md-6">
+				<img class="img-responsive" src="img/square_logo_big.png" alt="HackTech Logo" width="60%" height"60%" style="padding-top:100px">	
+				</div>
+				</center>
+
+
+
+				<div class="col-md-6">
+				<center>
+				<h2> Tech </h2>
+				<img class="img-responsive" src="img/intel-logo.png" alt="Intel Logo" width="60%" height"60%" >	
+				<h1>+</h1>
+				<img class="img-responsive" src="img/mitek_logo_large.png" alt="Mitek Logo" width="70%" height"70%">	
+				</div>
+				</center>
+
+    		</div>
+    	</div>
+	</section>
 
 
 </body>
