hackathon section updated

--- a/index.html
+++ b/index.html
@@ -98,31 +98,73 @@
 
     <section class="hackathon" id="hackathon_section">
     	<div class="container">
-    		<div class="row-fluid">
-
-    			<!--HACK TECH-->
-
 	    		<center>
 	    		<br>	
 	    		<h1> Hackathon: <i>|ˈhakəˌTHän |</i> "Hack" + "Marathon" </h2>
 	    		<h3> <i><b>Synonyms</b></i>: fun, challenging, crazy, sleep-deprivation, madness, APIs, food</h3>
 	    		<br>
-	    		<br>	
+	    		<br>
+	    		</center>
+	    <div>
+
+	    	<!--HACK TECH-->
+    	<div class="container">
+    		<div class="row-fluid">
+				
+				<center>
 	    		<div class="col-md-6">
-				<img class="img-responsive" src="img/square_logo_big.png" alt="HackTech Logo" width="60%" height"60%" style="padding-top:100px">	
+				<img class="img-responsive" src="img/square_logo_big.png" alt="HackTech Logo" width="60%" height"60%" style="padding-top:100px; padding-bottom:100px;">	
 				</div>
 				</center>
 
+
+				<div class="col-md-6" style="padding-top:180px">
+				<center>
+				<p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Curabitur sed sapien elementum, accumsan sapien sodales, scelerisque diam. Aenean in mi sed dui condimentum posuere vel et erat. Aenean commodo, mauris quis pellentesque ornare, lacus mauris sollicitudin magna, eget tincidunt lorem libero eu neque. Vestibulum ante ipsum primis in faucibus orci luctus et ultrices posuere cubilia Curae; Mauris velit arcu, egestas sed vulputate eget, mattis eu ante. Praesent placerat eros et bibendum auctor. Integer velit elit, euismod non risus eu, tristique pharetra magna.</p>
+				</center>
+				</div>
+
+			</div>
+		</div>
+    		
+
+
+			<!--LA HACKS-->
+    	<div class="container">
+    		<div class="row-fluid">
+
+    			<center>
+				<div class="col-md-6" style="padding-top:220px">
+				<p>Integer metus quam, condimentum ut vulputate a, congue sit amet velit. Pellentesque odio odio, dapibus molestie tortor convallis, accumsan mollis erat. Aliquam lacinia nulla ac sem porta, ac euismod enim pulvinar. In vel aliquam dui. Nulla vitae felis id enim semper dignissim quis quis odio. Nulla volutpat leo eget nibh commodo congue. Maecenas id neque libero. In vitae ante metus. Proin interdum urna in eros fringilla, id ullamcorper nisi vehicula.</p>
+				</div>
+				</center>
 
 
 				<div class="col-md-6">
 				<center>
-				<h2> Tech </h2>
-				<img class="img-responsive" src="img/intel-logo.png" alt="Intel Logo" width="60%" height"60%" >	
-				<h1>+</h1>
-				<img class="img-responsive" src="img/mitek_logo_large.png" alt="Mitek Logo" width="70%" height"70%">	
+				<img class="img-responsive" src="img/LA_Hacks_Logo.png" alt="LA HACKS Logo" width="60%" height"60%" style="padding-top:100px; padding-bottom:100px;">	
+				</center>
+				</div>
+			</div>
+
+
+
+			<!--ANGELHACKS-->
+    	<div class="container">
+    		<div class="row-fluid">
+
+    			<center>
+				<div class="col-md-6">
+				<img class="img-responsive" src="img/angelhack_logo.png" alt="ANGELHACKS Logo" width="60%" height"60%" style="padding-top:100px; padding-bottom:100px;">	
 				</div>
 				</center>
+
+
+				<div class="col-md-6" style="padding-top:160px">
+				<center>
+				<p>Morbi ultricies auctor fermentum. Aenean sed nisi quis lacus vulputate semper eget in velit. Duis laoreet at diam sed varius. Morbi quis sapien posuere, molestie arcu nec, ullamcorper quam. Pellentesque consequat tortor vitae felis volutpat, eget semper purus pellentesque. Sed scelerisque ante non arcu pulvinar sollicitudin. Integer in velit vitae purus lobortis sagittis. Pellentesque aliquet feugiat rutrum. In vel dui ligula. Sed blandit a justo et adipiscing. Praesent congue mauris eget nulla tincidunt gravida. Maecenas posuere elit purus, sed mollis justo imperdiet id.</p>
+				</center>
+				</div>
 
     		</div>
     	</div>
