made dotted line with css

--- a/index.html
+++ b/index.html
@@ -69,7 +69,7 @@
                         <a href="#page-top"></a>
                     </li>
                     <li class="page-scroll">
-                        <a href="#projects">Projects</a>
+                        <a href="#hackathon_section">Hacking</a>
                     </li>
                 </ul>
             </div><!-- /.navbar-collapse -->
@@ -83,9 +83,7 @@
         	<div class="row">
         		<div class="col-lg-12 text-center">
         			<center>
-        				<!--
         				<img class="img-responsive" src="img/jordan_banafsheha_profile_pic.png" alt="Jordan Banafsheha" class="img-circle" style="padding-top:100px">
-        				-->
         			</center>
         				<h1>hi</h1>
 
@@ -98,13 +96,16 @@
 
     <section class="hackathon" id="hackathon_section">
     	<div class="container">
+    		<div class="well">
 	    		<center>
 	    		<br>	
 	    		<h1> Hackathon: <i>|ˈhakəˌTHän |</i> "Hack" + "Marathon" </h2>
 	    		<h3> <i><b>Synonyms</b></i>: fun, challenging, crazy, sleep-deprivation, madness, APIs, food</h3>
+	    		<h3> <i><b>Definition</b></i>: N/A. It's what you make of it, whether you're a designer, developer, or anyone else.</h3>
 	    		<br>
 	    		<br>
 	    		</center>
+	    	</div>
 	    <div>
 
 	    	<!--HACK TECH-->
