social media icons

--- a/index.html
+++ b/index.html
@@ -85,7 +85,23 @@
         			<center>
         				<img class="img-responsive" src="img/jordan_banafsheha_profile_pic.png" alt="Jordan Banafsheha" class="img-circle" style="padding-top:100px">
         			</center>
-        				<h1>hi</h1>
+        				<h1>hi, i'm jordan</h1>
+
+        			<center>
+	    			<div class="col-md-3">
+	    				<a href="twitter.com"><img class="img-responsive" src="img/twitter.png" alt="Twitter" style="padding-top:100px"></a>
+	    			</div>
+	    			<div class="col-md-3">
+	    				<a href="facebook.com"><img class="img-responsive" src="img/facebook.png" alt="Facebook" style="padding-top:100px"></a>
+	    			</div>	 
+	    			<div class="col-md-3">
+	    				<a href="dribbble.com"><img class="img-responsive" src="img/dribble.png" alt="dribbble" style="padding-top:100px"></a>
+	    			</div> 
+	    			<div class="col-md-3">
+	    				<a href="linkedin.com"><img class="img-responsive" src="img/linkedin.png" alt="linkedin" style="padding-top:100px"></a>
+	    			</div>  			
+	    			</center>
+
 
         		</div>
         	</div>
