added animate css and winner logo

--- a/index.html
+++ b/index.html
@@ -17,6 +17,10 @@
 	<!-- Font awesome include -->
     <link href="font-awesome/css/font-awesome.min.css" rel="stylesheet" type="text/css">
 
+	<!-- Animations -->
+	  <link rel="stylesheet" href="css/animate.min.css">
+
+
 	 <!-- Twitter Card data -->
     <meta name="twitter:card" content="summary_large_image">
     <meta name="twitter:site" content="@jordanbanaf">
@@ -93,13 +97,13 @@
 	    			</div>
 	    			<div class="col-md-3">
 	    				<a href="facebook.com"><img class="img-responsive" src="img/facebook.png" alt="Facebook" style="padding-top:100px"></a>
-	    			</div>	 
+	    			</div>
 	    			<div class="col-md-3">
 	    				<a href="dribbble.com"><img class="img-responsive" src="img/dribble.png" alt="dribbble" style="padding-top:100px"></a>
-	    			</div> 
+	    			</div>
 	    			<div class="col-md-3">
 	    				<a href="linkedin.com"><img class="img-responsive" src="img/linkedin.png" alt="linkedin" style="padding-top:100px"></a>
-	    			</div>  			
+	    			</div>
 	    			</center>
 
 
@@ -111,15 +115,17 @@
 
 
     <section class="hackathon" id="hackathon_section">
-    	<div class="container">
+    	<div class="container"style="padding-top:30px">
     		<div class="well">
+					<div class="animated bounceIn">
 	    		<center>
-	    		<br>	
+	    		<br>
 	    		<h1> Hackathon: <i>|ˈhakəˌTHän |</i> "Hack" + "Marathon" </h2>
 	    		<h3> <i><b>Synonyms</b></i>: fun, challenging, crazy, sleep-deprivation, madness, APIs, food</h3>
 	    		<h3> <i><b>Definition</b></i>: N/A. It's what you make of it, whether you're a designer, developer, or anyone else.</h3>
 	    		<br>
 	    		<br>
+					</div>
 	    		</center>
 	    	</div>
 	    <div>
@@ -127,10 +133,10 @@
 	    	<!--HACK TECH-->
     	<div class="container">
     		<div class="row-fluid">
-				
+
 				<center>
 	    		<div class="col-md-6">
-				<img class="img-responsive" src="img/square_logo_big.png" alt="HackTech Logo" width="60%" height"60%" style="padding-top:100px; padding-bottom:100px;">	
+				<img class="img-responsive" src="img/square_logo_big.png" alt="HackTech Logo" width="60%" height"60%" style="padding-top:100px; padding-bottom:100px;">
 				</div>
 				</center>
 
@@ -143,7 +149,7 @@
 
 			</div>
 		</div>
-    		
+
 
 
 			<!--LA HACKS-->
@@ -159,7 +165,7 @@
 
 				<div class="col-md-6">
 				<center>
-				<img class="img-responsive" src="img/LA_Hacks_Logo.png" alt="LA HACKS Logo" width="60%" height"60%" style="padding-top:100px; padding-bottom:100px;">	
+				<img class="img-responsive" src="img/LA_Hacks_Logo.png" alt="LA HACKS Logo" width="60%" height"60%" style="padding-top:100px; padding-bottom:100px;">
 				</center>
 				</div>
 			</div>
@@ -172,7 +178,7 @@
 
     			<center>
 				<div class="col-md-6">
-				<img class="img-responsive" src="img/angelhack_logo.png" alt="ANGELHACKS Logo" width="60%" height"60%" style="padding-top:100px; padding-bottom:100px;">	
+				<img class="img-responsive" src="img/angelhack_logo.png" alt="ANGELHACKS Logo" width="60%" height"60%" style="padding-top:100px; padding-bottom:100px;">
 				</div>
 				</center>
 
@@ -182,9 +188,16 @@
 				<p>Morbi ultricies auctor fermentum. Aenean sed nisi quis lacus vulputate semper eget in velit. Duis laoreet at diam sed varius. Morbi quis sapien posuere, molestie arcu nec, ullamcorper quam. Pellentesque consequat tortor vitae felis volutpat, eget semper purus pellentesque. Sed scelerisque ante non arcu pulvinar sollicitudin. Integer in velit vitae purus lobortis sagittis. Pellentesque aliquet feugiat rutrum. In vel dui ligula. Sed blandit a justo et adipiscing. Praesent congue mauris eget nulla tincidunt gravida. Maecenas posuere elit purus, sed mollis justo imperdiet id.</p>
 				</center>
 				</div>
-
     		</div>
+
     	</div>
+			<center>
+				<h3> One more thing... </h3>
+				<h2> We won first place </h2>
+				<div class="animated tada">
+				<img class="img-responsive" src="img/winnder.png" alt="1st place" >
+				</div>
+			</center>
 	</section>
 
 
@@ -193,5 +206,3 @@
 
 
 </html>
-
-
