apple theme to win part

--- a/index.html
+++ b/index.html
@@ -191,15 +191,24 @@
     		</div>
 
     	</div>
-			<center>
-				<h3> One more thing... </h3>
-				<h2> We won first place </h2>
-				<div class="animated tada">
-				<img class="img-responsive" src="img/winnder.png" alt="1st place" >
-				</div>
-			</center>
+
 	</section>
 
+
+	<section class="winner">
+		<div class="onemorething">
+				<center>
+					<br>
+					<br>
+					<h3> One more thing... </h3>
+					<h2> We won first place </h2>
+					<br>
+					<div class="animated tada">
+					<img class="img-responsive" src="img/winnder.png" alt="1st place" style="padding-bottom:40px" >
+					</div>
+				</center>
+		</div>
+	</section>
 
 </body>
 
