--- a/index.html
+++ b/index.html
@@ -20,6 +20,13 @@
 	<!-- Animations -->
 	  <link rel="stylesheet" href="css/animate.min.css">
 
+	<!-- Jquery -->
+	  <script src="js/jquery-1.9.1.min.js"></script>
+
+	<!-- scrollorama -->
+		<script src="js/jquery.scrollorama.js"></script>
+
+
 
 	 <!-- Twitter Card data -->
     <meta name="twitter:card" content="summary_large_image">
