work experience section started

--- a/index.html
+++ b/index.html
@@ -82,6 +82,9 @@
                     <li class="page-scroll">
                         <a href="#hackathon_section">Hacking</a>
                     </li>
+										<li class="page-scroll">
+											<a href="#featured">Mentions</a>
+										</li>
                 </ul>
             </div><!-- /.navbar-collapse -->
         </div><!-- /.container-fluid -->
@@ -230,6 +233,20 @@
 				<div class="col-md-6">
 					<a href="https://developers.miteksystems.com/node/183"><img class="img-responsive" src="img/mitek_logo_large.png" alt="mitek logo" style="padding-bottom:40px; padding-top:60px" width="60%" height"60%"></a>
 				</div>
+			</div>
+		</div>
+	</section>
+
+
+	<!-- Other Projects -->
+	<section class="work_experience" id="work">
+		<div class-"container">
+			<div class="row">
+				<h1> Work Experience </h1>
+				<center>
+				<img class="img-responsive" src="img/cyberchimps_logo.png" alt="Cyber Chimps" style="padding-bottom:40px; padding-top:60px" width="50%" height"50%">
+				<img class="img-responsive" src="img/billguard.png" alt="BillGuard" style="padding-bottom:40px; padding-top:60px" width="30%" height"30%">
+				</center>
 			</div>
 		</div>
 	</section>
